--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -2,77 +2,88 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>{#title|striptags|upper}Nette Application Skeleton{/#}</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<!-- Le styles -->
-		<link href="{$basePath}/css/bootstrap.min.css" rel="stylesheet">
-		<style>
-		  body {
-			padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-		  }
-		</style>
-		<link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+		<title>{#title|striptags|upper}Nette Application Skeleton{/#}</title>
 
-		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+		<link href="{$basePath}/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+		<link href="{$basePath}/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+		<link href="{$basePath}/css/carousel.css" rel="stylesheet">
+
+		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
-		  <script src="{$basePath}/js/html5shiv.js"></script>
+			<script src="{$basePath}/vendor/bootstrap/assets/js/html5shiv.js"></script>
+			<script src="{$basePath}/vendor/bootstrap/assets/js/respond.min.js"></script>
 		<![endif]-->
 
-		<!-- Fav and touch icons -->
-		{#head}{/#}
+		<script>
+			var q = [], $ = function(f) {
+				q.push(f);
+					};
+		</script>
+
 	</head>
-
+	
 	<body>
-
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inner">
+		<div class="navbar-wrapper">
 			<div class="container">
-				<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="brand" href="#">Project name</a>
-				<div class="nav-collapse collapse">
-					<ul class="nav">
-						<li class="active"><a href="#">Home</a></li>
-						<li><a href="#about">About</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</div><!--/.nav-collapse -->
+
+				<div class="navbar navbar-inverse navbar-static-top">
+					<div class="container">
+						<div class="navbar-header">
+							<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+								<span class="icon-bar"></span>
+							</button>
+							<a class="navbar-brand" href="#">Project name</a>
+						</div>
+						<div class="navbar-collapse collapse">
+							<ul class="nav navbar-nav">
+								<li class="active"><a href="#">Home</a></li>
+								<li><a href="#about">About</a></li>
+								<li><a href="#contact">Contact</a></li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+									<ul class="dropdown-menu">
+										<li><a href="#">Action</a></li>
+										<li><a href="#">Another action</a></li>
+										<li><a href="#">Something else here</a></li>
+										<li class="divider"></li>
+										<li class="dropdown-header">Nav header</li>
+										<li><a href="#">Separated link</a></li>
+										<li><a href="#">One more separated link</a></li>
+									</ul>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+
 			</div>
 		</div>
-	</div>
 
-	<div class="container">
+		{snippet flashes}
+			{foreach $flashes as $flash}
+				<div class="alert alert-{$flash->type} span12">
+					<a class="close" data-dismiss="alert">×</a>
+					<span class="icon icon-{$flash->type}"></span>
+					<strong>{$flash->message}</strong>
+				</div>
+			{/foreach}
+		{/snippet}
 
-	{snippet flashes}
-		{foreach $flashes as $flash}
-			<div class="alert alert-{$flash->type} span12">
-				<a class="close" data-dismiss="alert">×</a>
-				<span class="icon icon-{$flash->type}"></span>
-				<strong>{$flash->message}</strong>
-			</div>
-		{/foreach}
-	{/snippet}
+		{include #content}	
 
-	{include #content}	
+		<footer>
+			<p class="pull-right"><a href="#">Back to top</a></p>
+			<p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+		</footer>
 
-	</div> <!-- /container -->
+		</div><
 
-	<!-- Le javascript
-	================================================== -->
-	<!-- Placed at the end of the document so the pages load faster -->
-
-	<script src="{$basePath}/js/jquery.js"></script>
-	<script src="{$basePath}/js/bootstrap.min.js"></script>
-	<script src="{$basePath}/js/netteForms.js"></script>
-	<script src="{$basePath}/js/main.js"></script>
-	{#scripts}
-	{/#}
-
+		<script data-main="/js/main" src="{$basePath}/vendor/requirejs/require.js"></script>
 	</body>
 </html>
