--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -8,9 +8,7 @@
 
 		<title>{#title|striptags|upper}Nette Application Skeleton{/#}</title>
 
-		<link href="{$basePath}/vendor/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-		<link href="{$basePath}/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-		<link href="{$basePath}/css/carousel.css" rel="stylesheet">
+		<link href="{$basePath}/css/app.css" rel="stylesheet">
 
 		<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!--[if lt IE 9]>
@@ -25,10 +23,10 @@
 		</script>
 
 	</head>
-	
+
 	<body>
-		<div class="navbar-wrapper">
-			<div class="container">
+		<div class="container">
+			<div class="navbar-wrapper">
 
 				<div class="navbar navbar-inverse navbar-static-top">
 					<div class="container">
@@ -38,11 +36,11 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a class="navbar-brand" href="#">Project name</a>
+							<a class="navbar-brand" n:href="homepage:">Project name</a>
 						</div>
 						<div class="navbar-collapse collapse">
 							<ul class="nav navbar-nav">
-								<li class="active"><a href="#">Home</a></li>
+								<li class="active"><a n:href="homepage:">Home</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<li class="dropdown">
@@ -63,27 +61,25 @@
 				</div>
 
 			</div>
+
+			{snippet flashes}
+				{foreach $flashes as $flash}
+					<div class="alert alert-{$flash->type} span12">
+						<a class="close" data-dismiss="alert">×</a>
+						<span class="icon icon-{$flash->type}"></span>
+						<strong>{$flash->message}</strong>
+					</div>
+				{/foreach}
+			{/snippet}
+
+			{include #content}
+
+			<footer>
+				<p class="pull-right"><a href="#">Back to top</a></p>
+				<p>&copy; 2013 BAZIK, s.r.o. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+			</footer>
+
 		</div>
-
-		{snippet flashes}
-			{foreach $flashes as $flash}
-				<div class="alert alert-{$flash->type} span12">
-					<a class="close" data-dismiss="alert">×</a>
-					<span class="icon icon-{$flash->type}"></span>
-					<strong>{$flash->message}</strong>
-				</div>
-			{/foreach}
-		{/snippet}
-
-		{include #content}	
-
-		<footer>
-			<p class="pull-right"><a href="#">Back to top</a></p>
-			<p>&copy; 2013 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
-		</footer>
-
-		</div><
-
 		<script data-main="/js/main" src="{$basePath}/vendor/requirejs/require.js"></script>
 	</body>
 </html>
