--- a/app/templates/Sign/in.latte
+++ b/app/templates/Sign/in.latte
@@ -1,6 +1,4 @@
 {#content}
-<h1 n:block=title>Sign in</h1>
+{*<h1 n:block=title>Sign in</h1>*}
 
 {control signInForm}
-
-{* or use {include '../components/form.latte', form => $presenter[signInForm]} *}
