--- a/www/less/app.less
+++ b/www/less/app.less
@@ -1,10 +1,44 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 30.10.2013, 13:57:43
-    Author     : Martin Bažík <martin@bazo.sk>
-*/
+@import "../vendor/bootstrap/less/bootstrap.less";
+@import "../vendor/lesshat/build/lesshat.less";
 
+.form-signin {
+	max-width: 330px;
+	padding: 15px;
+	margin: 0 auto;
+
+	.form-signin-heading,.checkbox {
+		margin-bottom: 10px;
+	}
+
+	.checkbox {
+		font-weight: normal;
+	}
+
+	.form-control {
+		position: relative;
+		font-size: 16px;
+		height: auto;
+		padding: 10px;
+		-webkit-box-sizing: border-box;
+		-moz-box-sizing: border-box;
+		box-sizing: border-box;
+
+		&:focus{
+			z-index: 2;
+		}
+	}
+
+
+	input[type="text"] {
+		margin-bottom: -1px;
+		border-bottom-left-radius: 0;
+		border-bottom-right-radius: 0;
+	}
+
+	input[type="password"] {
+		margin-bottom: 10px;
+		border-top-left-radius: 0;
+		border-top-right-radius: 0;
+	}
+
+}
