--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -1,4 +1,4 @@
-{#content}
+{block #content}
 <div class="container marketing">
 
 	<div class="row">
@@ -61,4 +61,4 @@
 	</div>
 
 	<hr class="featurette-divider">
-	{/#}
+	{/block}
