--- a/www/less/app.less
+++ b/www/less/app.less
@@ -1,5 +1,5 @@
 @import "../vendor/bootstrap/less/bootstrap.less";
-@import "../vendor/lesshat/build/lesshat.less";
+//@import "../vendor/lesshat/build/lesshat.less";
 
 .form-signin {
 	max-width: 330px;
