--- a/app/components/LoginForm/template.latte
+++ b/app/components/LoginForm/template.latte
@@ -1,7 +1,7 @@
 {form form class => "form-signin"}
 	<h2 class="form-signin-heading">Sign in</h2>
 
-	<div class="alert alert-danger alert-dismissable" n:foreach="$form->getAllErrors() as $error">
+	<div class="alert alert-danger alert-dismissable" n:foreach="$form->getErrors() as $error">
 		<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
 		<strong>Error!</strong> {$error}
 	</div>
