--- a/app/templates/@layout.latte
+++ b/app/templates/@layout.latte
@@ -6,7 +6,7 @@
 		<meta name="description" content="">
 		<meta name="author" content="">
 
-		<title>{#title|striptags|upper}Nette Application Skeleton{/#}</title>
+		<title>{block title|striptags|upper}Nette Application Skeleton{/block}</title>
 
 		<link href="{$basePath}/css/app.css" rel="stylesheet">
 
